; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_crypto.c_svn_crypto__decrypt_password.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_crypto.c_svn_crypto__decrypt_password.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }
%struct.TYPE_9__ = type { i64, i64 }

@SVN_ERR_UNSUPPORTED_FEATURE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"Cryptographic support is not available\00", align 1
@APR_EGENERAL = common dso_local global i32 0, align 4
@APR_KEY_AES_256 = common dso_local global i32 0, align 4
@APR_MODE_CBC = common dso_local global i32 0, align 4
@APR_SUCCESS = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@NUM_ITERATIONS = common dso_local global i32 0, align 4
@RANDOM_PREFIX_LEN = common dso_local global i32 0, align 4
@SVN_ERR_INCORRECT_PARAMS = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_crypto__decrypt_password(i8** %0, %struct.TYPE_10__* %1, %struct.TYPE_9__* %2, %struct.TYPE_9__* %3, %struct.TYPE_9__* %4, %struct.TYPE_9__* %5, i32* %6, i32* %7) #0 {
  %9 = alloca i8**, align 8
  %10 = alloca %struct.TYPE_10__*, align 8
  %11 = alloca %struct.TYPE_9__*, align 8
  %12 = alloca %struct.TYPE_9__*, align 8
  %13 = alloca %struct.TYPE_9__*, align 8
  %14 = alloca %struct.TYPE_9__*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  store i8** %0, i8*** %9, align 8
  store %struct.TYPE_10__* %1, %struct.TYPE_10__** %10, align 8
  store %struct.TYPE_9__* %2, %struct.TYPE_9__** %11, align 8
  store %struct.TYPE_9__* %3, %struct.TYPE_9__** %12, align 8
  store %struct.TYPE_9__* %4, %struct.TYPE_9__** %13, align 8
  store %struct.TYPE_9__* %5, %struct.TYPE_9__** %14, align 8
  store i32* %6, i32** %15, align 8
  store i32* %7, i32** %16, align 8
  %17 = load i32, i32* @SVN_ERR_UNSUPPORTED_FEATURE, align 4
  %18 = call i32* @svn_error_create(i32 %17, i32* null, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  ret i32* %18
}

declare dso_local i32* @svn_error_create(i32, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
